attempt price fix premium api
